Adicionando o Fluxograma ao HTML

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     </div>
 
     <script src="script.js"></script>
+    <div class="fluxograma-button">
+        <a href="fluxograma.html" target="_blank">Ver Fluxograma do Programa</a>
+    </div>
+    
 </body>
 
 </html>
